another refactor, now minifies js

--- a/component.html
+++ b/component.html
@@ -61,6 +61,8 @@
     <div class="clear"></div>
   </template>
   <script>
-    @@script
+    @@proto
+
+    Polymer.register(this, require("proto"));
   </script>
 </element>
