--- a/index.html
+++ b/index.html
@@ -61,129 +61,8 @@
     <div class="clear"></div>
   </template>
   <script>
-    Polymer.register(this, {
-  fixed: false,
-  editable: false,
+    require=function(t,e,n){function s(n,r){if(!e[n]){if(!t[n]){var l="function"==typeof require&&require;if(!r&&l)return l(n,!0);if(i)return i(n,!0);throw new Error("Cannot find module '"+n+"'")}var o=e[n]={exports:{}};t[n][0].call(o.exports,function(e){var i=t[n][1][e];return s(i?i:e)},o,o.exports)}return e[n].exports}for(var i="function"==typeof require&&require,r=0;r<n.length;r++)s(n[r]);return s}({proto:[function(t,e){e.exports=t("o1PFch")},{}],o1PFch:[function(t,e){e.exports={fixed:!1,editable:!1,ready:function(){this._ready=!0,this.$.title.textContent=this.model.title,this.parseBody()},set model(t){this._model=t,this.observeModel()},get model(){return this._model||(this.model={title:"",body:""}),this._model},observeModel:function(){var t=this;Object.keys(this._model).forEach(function(e){var n,s=e+"Changed";n=new PathObserver(t._model,e,function(e,n){e!==n&&"function"==typeof t[s]&&t[s](n)}),Polymer.registerObserver(t,"property",e,n),t[s]&&t[s]()})},parse:t("./components/marked/index.js"),editModeOn:function(){this.editable&&(this.$.editableBody.style.height=this.$.body.clientHeight+"px",this.onEditMode=!0)},editModeOff:function(){this.onEditMode&&(this.parseBody(),this.onEditMode=!1)},updateTitleModel:function(){for(;this.$.title.firstElementChild;)this.$.title.removeChild(this.$.title.firstElementChild);this.model.title=this.$.title.textContent},updateTitle:function(){this.$.title.textContent=this.model.title},titleChanged:function(t){this._ready&&(this.$.save.hidden=!t||!this.model.title||""===this.model.title,this.onEditMode||("none"===this.style.display?this.dispatchEvent(new CustomEvent("foreign:update:title")):this.$.title.style.opacity=0))},titleTransitionEnded:function(){this.$.title.style.opacity>0||(this.dispatchEvent(new CustomEvent("foreign:update:title")),this.$.title.style.opacity=1)},bodyChanged:function(t){this._ready&&(this.$.save.hidden=!t||!this.model.body||""===this.model.body,this.onEditMode||("none"===this.style.display?this.dispatchEvent(new CustomEvent("foreign:update:body")):this.$.body.style.opacity=0))},bodyTransitionEnded:function(){this.$.body.style.opacity>0||(this.dispatchEvent(new CustomEvent("foreign:update:body")),this.$.body.style.opacity=1)},parseBody:function(){this._ready&&(this.$.editableBody.value||(this.$.editableBody.value=this.model.body),this.$.body.innerHTML=this.parse(this.$.editableBody.value),this.fire("update"))},remove:function(){this.parentNode&&(this.parentNode.removeChild(this),this.fire("delete"))},save:function(){this.$.save.hidden=!0,this.fire("save")},keyUp:function(t){switch(t.keyCode){case 13:this.save();case 27:this.editModeOff()}},preventNewLine:function(t){13===t.keyCode&&t.preventDefault()}}},{"./components/marked/index.js":1}],1:[function(t,e){e.exports=t("./lib/marked")},{"./lib/marked":2}],2:[function(t,e,n){!function(t){!function(){function t(t){this.tokens=[],this.tokens.links={},this.options=t||a.defaults,this.rules=u.normal,this.options.gfm&&(this.rules=this.options.tables?u.tables:u.gfm)}function s(t,e){if(this.options=e||a.defaults,this.links=t,this.rules=p.normal,!this.links)throw new Error("Tokens array requires a `links` property.");this.options.gfm?this.rules=this.options.breaks?p.breaks:p.gfm:this.options.pedantic&&(this.rules=p.pedantic)}function i(t){this.tokens=[],this.token=null,this.options=t||a.defaults}function r(t,e){return t.replace(e?/&/g:/&(?!#?\w+;)/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;").replace(/"/g,"&quot;").replace(/'/g,"&#39;")}function l(t,e){return t=t.source,e=e||"",function n(s,i){return s?(i=i.source||i,i=i.replace(/(^|[^\[])\^/g,"$1"),t=t.replace(s,i),n):new RegExp(t,e)}}function o(){}function h(t){for(var e,n,s=1;s<arguments.length;s++){e=arguments[s];for(n in e)Object.prototype.hasOwnProperty.call(e,n)&&(t[n]=e[n])}return t}function a(e,n,s){if(s||"function"==typeof n){s||(s=n,n=null),n&&(n=h({},a.defaults,n));var l,o,u=n.highlight,p=0;try{l=t.lex(e,n)}catch(c){return s(c)}o=l.length;var g=function(t){var e,r;t!==!0&&delete n.highlight;try{e=i.parse(l,n)}catch(o){r=o}return n.highlight=u,r?s(r):s(null,e)};if(!u||u.length<3)return g(!0);if(!o)return g();for(;p<l.length;p++)!function(t){return"code"!==t.type?--o||g():u(t.text,t.lang,function(e,n){return null==n||n===t.text?--o||g():(t.text=n,t.escaped=!0,--o||g(),void 0)})}(l[p])}else try{return n&&(n=h({},a.defaults,n)),i.parse(t.lex(e,n),n)}catch(c){if(c.message+="\nPlease report this to https://github.com/chjj/marked.",(n||a.defaults).silent)return"<p>An error occured:</p><pre>"+r(c.message+"",!0)+"</pre>";throw c}}var u={newline:/^\n+/,code:/^( {4}[^\n]+\n*)+/,fences:o,hr:/^( *[-*_]){3,} *(?:\n+|$)/,heading:/^ *(#{1,6}) *([^\n]+?) *#* *(?:\n+|$)/,nptable:o,lheading:/^([^\n]+)\n *(=|-){3,} *\n*/,blockquote:/^( *>[^\n]+(\n[^\n]+)*\n*)+/,list:/^( *)(bull) [\s\S]+?(?:hr|\n{2,}(?! )(?!\1bull )\n*|\s*$)/,html:/^ *(?:comment|closed|closing) *(?:\n{2,}|\s*$)/,def:/^ *\[([^\]]+)\]: *<?([^\s>]+)>?(?: +["(]([^\n]+)[")])? *(?:\n+|$)/,table:o,paragraph:/^((?:[^\n]+\n?(?!hr|heading|lheading|blockquote|tag|def))+)\n*/,text:/^[^\n]+/};u.bullet=/(?:[*+-]|\d+\.)/,u.item=/^( *)(bull) [^\n]*(?:\n(?!\1bull )[^\n]*)*/,u.item=l(u.item,"gm")(/bull/g,u.bullet)(),u.list=l(u.list)(/bull/g,u.bullet)("hr",/\n+(?=(?: *[-*_]){3,} *(?:\n+|$))/)(),u._tag="(?!(?:a|em|strong|small|s|cite|q|dfn|abbr|data|time|code|var|samp|kbd|sub|sup|i|b|u|mark|ruby|rt|rp|bdi|bdo|span|br|wbr|ins|del|img)\\b)\\w+(?!:/|@)\\b",u.html=l(u.html)("comment",/<!--[\s\S]*?-->/)("closed",/<(tag)[\s\S]+?<\/\1>/)("closing",/<tag(?:"[^"]*"|'[^']*'|[^'">])*?>/)(/tag/g,u._tag)(),u.paragraph=l(u.paragraph)("hr",u.hr)("heading",u.heading)("lheading",u.lheading)("blockquote",u.blockquote)("tag","<"+u._tag)("def",u.def)(),u.normal=h({},u),u.gfm=h({},u.normal,{fences:/^ *(`{3,}|~{3,}) *(\S+)? *\n([\s\S]+?)\s*\1 *(?:\n+|$)/,paragraph:/^/}),u.gfm.paragraph=l(u.paragraph)("(?!","(?!"+u.gfm.fences.source.replace("\\1","\\2")+"|")(),u.tables=h({},u.gfm,{nptable:/^ *(\S.*\|.*)\n *([-:]+ *\|[-| :]*)\n((?:.*\|.*(?:\n|$))*)\n*/,table:/^ *\|(.+)\n *\|( *[-:]+[-| :]*)\n((?: *\|.*(?:\n|$))*)\n*/}),t.rules=u,t.lex=function(e,n){var s=new t(n);return s.lex(e)},t.prototype.lex=function(t){return t=t.replace(/\r\n|\r/g,"\n").replace(/\t/g,"    ").replace(/\u00a0/g," ").replace(/\u2424/g,"\n"),this.token(t,!0)},t.prototype.token=function(t,e){for(var n,s,i,r,l,o,h,a,p,t=t.replace(/^ +$/gm,"");t;)if((i=this.rules.newline.exec(t))&&(t=t.substring(i[0].length),i[0].length>1&&this.tokens.push({type:"space"})),i=this.rules.code.exec(t))t=t.substring(i[0].length),i=i[0].replace(/^ {4}/gm,""),this.tokens.push({type:"code",text:this.options.pedantic?i:i.replace(/\n+$/,"")});else if(i=this.rules.fences.exec(t))t=t.substring(i[0].length),this.tokens.push({type:"code",lang:i[2],text:i[3]});else if(i=this.rules.heading.exec(t))t=t.substring(i[0].length),this.tokens.push({type:"heading",depth:i[1].length,text:i[2]});else if(e&&(i=this.rules.nptable.exec(t))){for(t=t.substring(i[0].length),o={type:"table",header:i[1].replace(/^ *| *\| *$/g,"").split(/ *\| */),align:i[2].replace(/^ *|\| *$/g,"").split(/ *\| */),cells:i[3].replace(/\n$/,"").split("\n")},a=0;a<o.align.length;a++)o.align[a]=/^ *-+: *$/.test(o.align[a])?"right":/^ *:-+: *$/.test(o.align[a])?"center":/^ *:-+ *$/.test(o.align[a])?"left":null;for(a=0;a<o.cells.length;a++)o.cells[a]=o.cells[a].split(/ *\| */);this.tokens.push(o)}else if(i=this.rules.lheading.exec(t))t=t.substring(i[0].length),this.tokens.push({type:"heading",depth:"="===i[2]?1:2,text:i[1]});else if(i=this.rules.hr.exec(t))t=t.substring(i[0].length),this.tokens.push({type:"hr"});else if(i=this.rules.blockquote.exec(t))t=t.substring(i[0].length),this.tokens.push({type:"blockquote_start"}),i=i[0].replace(/^ *> ?/gm,""),this.token(i,e),this.tokens.push({type:"blockquote_end"});else if(i=this.rules.list.exec(t)){for(t=t.substring(i[0].length),r=i[2],this.tokens.push({type:"list_start",ordered:r.length>1}),i=i[0].match(this.rules.item),n=!1,p=i.length,a=0;p>a;a++)o=i[a],h=o.length,o=o.replace(/^ *([*+-]|\d+\.) +/,""),~o.indexOf("\n ")&&(h-=o.length,o=this.options.pedantic?o.replace(/^ {1,4}/gm,""):o.replace(new RegExp("^ {1,"+h+"}","gm"),"")),this.options.smartLists&&a!==p-1&&(l=u.bullet.exec(i[a+1])[0],r===l||r.length>1&&l.length>1||(t=i.slice(a+1).join("\n")+t,a=p-1)),s=n||/\n\n(?!\s*$)/.test(o),a!==p-1&&(n="\n"===o[o.length-1],s||(s=n)),this.tokens.push({type:s?"loose_item_start":"list_item_start"}),this.token(o,!1),this.tokens.push({type:"list_item_end"});this.tokens.push({type:"list_end"})}else if(i=this.rules.html.exec(t))t=t.substring(i[0].length),this.tokens.push({type:this.options.sanitize?"paragraph":"html",pre:"pre"===i[1]||"script"===i[1],text:i[0]});else if(e&&(i=this.rules.def.exec(t)))t=t.substring(i[0].length),this.tokens.links[i[1].toLowerCase()]={href:i[2],title:i[3]};else if(e&&(i=this.rules.table.exec(t))){for(t=t.substring(i[0].length),o={type:"table",header:i[1].replace(/^ *| *\| *$/g,"").split(/ *\| */),align:i[2].replace(/^ *|\| *$/g,"").split(/ *\| */),cells:i[3].replace(/(?: *\| *)?\n$/,"").split("\n")},a=0;a<o.align.length;a++)o.align[a]=/^ *-+: *$/.test(o.align[a])?"right":/^ *:-+: *$/.test(o.align[a])?"center":/^ *:-+ *$/.test(o.align[a])?"left":null;for(a=0;a<o.cells.length;a++)o.cells[a]=o.cells[a].replace(/^ *\| *| *\| *$/g,"").split(/ *\| */);this.tokens.push(o)}else if(e&&(i=this.rules.paragraph.exec(t)))t=t.substring(i[0].length),this.tokens.push({type:"paragraph",text:"\n"===i[1][i[1].length-1]?i[1].slice(0,-1):i[1]});else if(i=this.rules.text.exec(t))t=t.substring(i[0].length),this.tokens.push({type:"text",text:i[0]});else if(t)throw new Error("Infinite loop on byte: "+t.charCodeAt(0));return this.tokens};var p={escape:/^\\([\\`*{}\[\]()#+\-.!_>])/,autolink:/^<([^ >]+(@|:\/)[^ >]+)>/,url:o,tag:/^<!--[\s\S]*?-->|^<\/?\w+(?:"[^"]*"|'[^']*'|[^'">])*?>/,link:/^!?\[(inside)\]\(href\)/,reflink:/^!?\[(inside)\]\s*\[([^\]]*)\]/,nolink:/^!?\[((?:\[[^\]]*\]|[^\[\]])*)\]/,strong:/^__([\s\S]+?)__(?!_)|^\*\*([\s\S]+?)\*\*(?!\*)/,em:/^\b_((?:__|[\s\S])+?)_\b|^\*((?:\*\*|[\s\S])+?)\*(?!\*)/,code:/^(`+)\s*([\s\S]*?[^`])\s*\1(?!`)/,br:/^ {2,}\n(?!\s*$)/,del:o,text:/^[\s\S]+?(?=[\\<!\[_*`]| {2,}\n|$)/};p._inside=/(?:\[[^\]]*\]|[^\]]|\](?=[^\[]*\]))*/,p._href=/\s*<?([^\s]*?)>?(?:\s+['"]([\s\S]*?)['"])?\s*/,p.link=l(p.link)("inside",p._inside)("href",p._href)(),p.reflink=l(p.reflink)("inside",p._inside)(),p.normal=h({},p),p.pedantic=h({},p.normal,{strong:/^__(?=\S)([\s\S]*?\S)__(?!_)|^\*\*(?=\S)([\s\S]*?\S)\*\*(?!\*)/,em:/^_(?=\S)([\s\S]*?\S)_(?!_)|^\*(?=\S)([\s\S]*?\S)\*(?!\*)/}),p.gfm=h({},p.normal,{escape:l(p.escape)("])","~|])")(),url:/^(https?:\/\/[^\s<]+[^<.,:;"')\]\s])/,del:/^~~(?=\S)([\s\S]*?\S)~~/,text:l(p.text)("]|","~]|")("|","|https?://|")()}),p.breaks=h({},p.gfm,{br:l(p.br)("{2,}","*")(),text:l(p.gfm.text)("{2,}","*")()}),s.rules=p,s.output=function(t,e,n){var i=new s(e,n);return i.output(t)},s.prototype.output=function(t){for(var e,n,s,i,l="";t;)if(i=this.rules.escape.exec(t))t=t.substring(i[0].length),l+=i[1];else if(i=this.rules.autolink.exec(t))t=t.substring(i[0].length),"@"===i[2]?(n=":"===i[1][6]?this.mangle(i[1].substring(7)):this.mangle(i[1]),s=this.mangle("mailto:")+n):(n=r(i[1]),s=n),l+='<a href="'+s+'">'+n+"</a>";else if(i=this.rules.url.exec(t))t=t.substring(i[0].length),n=r(i[1]),s=n,l+='<a href="'+s+'">'+n+"</a>";else if(i=this.rules.tag.exec(t))t=t.substring(i[0].length),l+=this.options.sanitize?r(i[0]):i[0];else if(i=this.rules.link.exec(t))t=t.substring(i[0].length),l+=this.outputLink(i,{href:i[2],title:i[3]});else if((i=this.rules.reflink.exec(t))||(i=this.rules.nolink.exec(t))){if(t=t.substring(i[0].length),e=(i[2]||i[1]).replace(/\s+/g," "),e=this.links[e.toLowerCase()],!e||!e.href){l+=i[0][0],t=i[0].substring(1)+t;continue}l+=this.outputLink(i,e)}else if(i=this.rules.strong.exec(t))t=t.substring(i[0].length),l+="<strong>"+this.output(i[2]||i[1])+"</strong>";else if(i=this.rules.em.exec(t))t=t.substring(i[0].length),l+="<em>"+this.output(i[2]||i[1])+"</em>";else if(i=this.rules.code.exec(t))t=t.substring(i[0].length),l+="<code>"+r(i[2],!0)+"</code>";else if(i=this.rules.br.exec(t))t=t.substring(i[0].length),l+="<br>";else if(i=this.rules.del.exec(t))t=t.substring(i[0].length),l+="<del>"+this.output(i[1])+"</del>";else if(i=this.rules.text.exec(t))t=t.substring(i[0].length),l+=r(this.smartypants(i[0]));else if(t)throw new Error("Infinite loop on byte: "+t.charCodeAt(0));return l},s.prototype.outputLink=function(t,e){return"!"!==t[0][0]?'<a href="'+r(e.href)+'"'+(e.title?' title="'+r(e.title)+'"':"")+">"+this.output(t[1])+"</a>":'<img src="'+r(e.href)+'" alt="'+r(t[1])+'"'+(e.title?' title="'+r(e.title)+'"':"")+">"},s.prototype.smartypants=function(t){return this.options.smartypants?t.replace(/--/g,"—").replace(/'([^']*)'/g,"‘$1’").replace(/"([^"]*)"/g,"“$1”").replace(/\.{3}/g,"…"):t},s.prototype.mangle=function(t){for(var e,n="",s=t.length,i=0;s>i;i++)e=t.charCodeAt(i),Math.random()>.5&&(e="x"+e.toString(16)),n+="&#"+e+";";return n},i.parse=function(t,e){var n=new i(e);return n.parse(t)},i.prototype.parse=function(t){this.inline=new s(t.links,this.options),this.tokens=t.reverse();for(var e="";this.next();)e+=this.tok();return e},i.prototype.next=function(){return this.token=this.tokens.pop()},i.prototype.peek=function(){return this.tokens[this.tokens.length-1]||0},i.prototype.parseText=function(){for(var t=this.token.text;"text"===this.peek().type;)t+="\n"+this.next().text;return this.inline.output(t)},i.prototype.tok=function(){switch(this.token.type){case"space":return"";case"hr":return"<hr>\n";case"heading":return"<h"+this.token.depth+">"+this.inline.output(this.token.text)+"</h"+this.token.depth+">\n";case"code":if(this.options.highlight){var t=this.options.highlight(this.token.text,this.token.lang);null!=t&&t!==this.token.text&&(this.token.escaped=!0,this.token.text=t)}return this.token.escaped||(this.token.text=r(this.token.text,!0)),"<pre><code"+(this.token.lang?' class="'+this.options.langPrefix+this.token.lang+'"':"")+">"+this.token.text+"</code></pre>\n";case"table":var e,n,s,i,l,o="";for(o+="<thead>\n<tr>\n",n=0;n<this.token.header.length;n++)e=this.inline.output(this.token.header[n]),o+=this.token.align[n]?'<th align="'+this.token.align[n]+'">'+e+"</th>\n":"<th>"+e+"</th>\n";for(o+="</tr>\n</thead>\n",o+="<tbody>\n",n=0;n<this.token.cells.length;n++){for(s=this.token.cells[n],o+="<tr>\n",l=0;l<s.length;l++)i=this.inline.output(s[l]),o+=this.token.align[l]?'<td align="'+this.token.align[l]+'">'+i+"</td>\n":"<td>"+i+"</td>\n";o+="</tr>\n"}return o+="</tbody>\n","<table>\n"+o+"</table>\n";case"blockquote_start":for(var o="";"blockquote_end"!==this.next().type;)o+=this.tok();return"<blockquote>\n"+o+"</blockquote>\n";case"list_start":for(var h=this.token.ordered?"ol":"ul",o="";"list_end"!==this.next().type;)o+=this.tok();return"<"+h+">\n"+o+"</"+h+">\n";case"list_item_start":for(var o="";"list_item_end"!==this.next().type;)o+="text"===this.token.type?this.parseText():this.tok();return"<li>"+o+"</li>\n";case"loose_item_start":for(var o="";"list_item_end"!==this.next().type;)o+=this.tok();return"<li>"+o+"</li>\n";case"html":return this.token.pre||this.options.pedantic?this.token.text:this.inline.output(this.token.text);case"paragraph":return"<p>"+this.inline.output(this.token.text)+"</p>\n";case"text":return"<p>"+this.parseText()+"</p>\n"}},o.exec=o,a.options=a.setOptions=function(t){return h(a.defaults,t),a},a.defaults={gfm:!0,tables:!0,breaks:!1,pedantic:!1,sanitize:!1,smartLists:!1,silent:!1,highlight:null,langPrefix:"lang-",smartypants:!1},a.Parser=i,a.parser=i.parse,a.Lexer=t,a.lexer=t.lex,a.InlineLexer=s,a.inlineLexer=s.output,a.parse=a,"object"==typeof n?e.exports=a:"function"==typeof define&&define.amd?define(function(){return a}):this.marked=a}.call(function(){return this||("undefined"!=typeof window?window:t)}())}(self)},{}]},{},[]);
 
-  ready: function() {
-    var self = this;
-    this._ready = true;
-    this.$.title.textContent = this.model.title;
-    this.parseBody();
-  },
-
-  set model(model) {
-    this._model = model;
-    this.observeModel();
-  },
-  get model() {
-    if (!this._model) {
-      this.model = {
-        title: "",
-        body: ""
-      };
-    }
-    return this._model;
-  },
-
-  observeModel: function() {
-    var self = this;
-
-    Object.keys(this._model).forEach(function(key) {
-      var fname = key + "Changed",
-      observer;
-
-      observer = new PathObserver(self._model, key, function(inNew, inOld) {
-        if (inNew === inOld) return;
-        if (typeof self[fname] === "function") self[fname](inOld);
-      });
-      Polymer.registerObserver(self, "property", key, observer);
-      if (self[fname]) self[fname]();
-    });
-  },
-  parse: require("marked"),
-  editModeOn: function() {
-    if (!this.editable) return;
-    this.$.editableBody.style.height = (this.$.body.clientHeight) + "px"; 
-    this.onEditMode = true;
-  },
-  editModeOff: function() {
-    if (!this.onEditMode) return;
-    this.parseBody();
-    this.onEditMode = false;
-  },
-  updateTitleModel: function() {
-    while (this.$.title.firstElementChild) {
-      this.$.title.removeChild(this.$.title.firstElementChild);
-    }
-    this.model.title = this.$.title.textContent;
-  },
-  updateTitle: function() {
-    this.$.title.textContent = this.model.title;
-  },
-  titleChanged: function(old) {
-    if (!this._ready) return;
-    this.$.save.hidden = !old || !this.model.title || this.model.title === "";
-    if (!this.onEditMode) {
-      if (this.style.display === "none") {
-        this.dispatchEvent(new CustomEvent("foreign:update:title"));
-      } else {
-        this.$.title.style.opacity = 0;
-      }
-    }
-  },
-  titleTransitionEnded: function() {
-    if (this.$.title.style.opacity > 0) return;
-    this.dispatchEvent(new CustomEvent("foreign:update:title"));
-    this.$.title.style.opacity = 1;
-  },
-  bodyChanged: function(old) {
-    if (!this._ready) return;
-    this.$.save.hidden = !old || !this.model.body || this.model.body === "";
-    if (!this.onEditMode) {
-      if (this.style.display === "none") {
-        this.dispatchEvent(new CustomEvent("foreign:update:body"));
-      } else {
-        this.$.body.style.opacity = 0;
-      }
-    }
-  },
-  bodyTransitionEnded: function() {
-    if (this.$.body.style.opacity > 0) return;
-    this.dispatchEvent(new CustomEvent("foreign:update:body"));
-    this.$.body.style.opacity = 1;
-  },
-  parseBody: function() {
-    if (!this._ready) return;
-    //Just to kickstart it, he's a little shy...
-    if (!this.$.editableBody.value) {
-      this.$.editableBody.value = this.model.body;
-    }
-    this.$.body.innerHTML = this.parse(this.$.editableBody.value);
-    this.fire("update");
-  },
-  remove: function() {
-    if (!this.parentNode) return;
-    this.parentNode.removeChild(this);
-    this.fire("delete");
-  },
-  save: function() {
-    this.$.save.hidden = true;
-    this.fire("save");
-  },
-  keyUp: function(e) {
-    switch (e.keyCode) {
-      case 13: //ENTER
-        this.save();
-      case 27: //ESC
-        this.editModeOff();
-    }
-  },
-  preventNewLine: function(e) {
-    if (e.keyCode === 13) {
-      e.preventDefault();
-    }
-  }
-});
+    Polymer.register(this, require("proto"));
   </script>
 </element>
